--- a/targets/hw/rpi.yml
+++ b/targets/hw/rpi.yml
@@ -42,11 +42,11 @@ create_img:
 pre_cache:
   - copy-file: /etc/initramfs-tools/hooks/rpi-resizerootfs
     src: rootfs/etc/initramfs-tools/hooks/rpi-resizerootfs
-    perm: "0755"
+    perm: 0755
 
   - copy-file: /etc/initramfs-tools/scripts/local-bottom/rpi-resizerootfs
     src: rootfs/etc/initramfs-tools/scripts/local-bottom/rpi-resizerootfs
-    perm: "0755"
+    perm: 0755
 
   - apt: install
     packages:
