--- a/example/rpi.yml
+++ b/example/rpi.yml
@@ -1,6 +1,6 @@
 steps:
 - mkimg: '{{ output }}'
-  size: 5G
+  size: 4G
 - mklabel: msdos
   device: '{{ output }}'
 - mkpart: primary
@@ -55,11 +55,11 @@ steps:
   unless: rootfs_unpacked
 - copy-file: /etc/initramfs-tools/hooks/rpi-resizerootfs
   src: rootfs/etc/initramfs-tools/hooks/rpi-resizerootfs
-  perm: 0755
+  perm: 493
   unless: rootfs_unpacked
 - copy-file: /etc/initramfs-tools/scripts/local-bottom/rpi-resizerootfs
   src: rootfs/etc/initramfs-tools/scripts/local-bottom/rpi-resizerootfs
-  perm: 0755
+  perm: 493
   unless: rootfs_unpacked
 - apt: install
   packages:
@@ -136,6 +136,9 @@ steps:
     sed -i ''s/cma=$CMA //'' /etc/kernel/postinst.d/z50-raspi-firmware
 
     '
+  unless: rootfs_unpacked
+- chroot: /
+  shell: touch '/generated-using-vmdb2'
   unless: rootfs_unpacked
 - copy-file: /bootstrap.sh
   src: /home/pi/vmdb-config/example/bootstrap.sh
